Fixed comments and invisible lists in posts

--- a/web/base.scss
+++ b/web/base.scss
@@ -200,7 +200,7 @@ input[type="submit"] {
   cursor: pointer; /* 3 */
 }
 
-ul {
+ul.post-list {
   padding: 0;
   list-style: none;
 }
